@@ -422,6 +422,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 14709) Fix login success message formatting when using cookie check
 * (bug 14710) Remove "donate" link from default sidebar
 * (bug 14745) Image moving works on sites that transform thumbnails via 404
+* (bug 14159) Use of MEMCACHE_COMPRESSED constant no longer causes E_NOTICE 
+  on PHP installs with the Memcache module installed.
 
 === API changes in 1.13 ===
 
